--- a/main/code/main.html
+++ b/main/code/main.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TripleV</title>
+    <link rel="stylesheet" href="style_main.css">
 </head>
 <body>
-    <h1>TripleV</h1>
+    <div class="content">
+        <h1>TripleV</h1>
+    </div>
+    <div class="navbar">
+        <div class="nav-item">
+            <button onclick="alert('Pomodoro')">Pomodoro</button>
+        </div>
+        <div class="nav-item">
+            <button onclick="alert('TODO List')">TODO List</button>
+        </div>
+        <div class="nav-item">
+            <button onclick="alert('Notes')">Notes</button>
+        </div>
+    </div>
 </body>
 </html>
