--- a/main/code/main.html
+++ b/main/code/main.html
@@ -12,14 +12,16 @@
     </div>
     <div class="navbar">
         <div class="nav-item">
-            <button onclick="alert('Pomodoro')">Pomodoro</button>
+            <button onclick="pomodoro()">Pomodoro</button>
         </div>
         <div class="nav-item">
-            <button onclick="alert('TODO List')">TODO List</button>
+            <button onclick="todoList()">TODO List</button>
         </div>
         <div class="nav-item">
-            <button onclick="alert('Notes')">Notes</button>
+            <button onclick="notes()">Notes</button>
         </div>
     </div>
+    
+    <script src="main.js"></script> <!-- Lien vers le fichier JavaScript -->
 </body>
 </html>
